# wsi-sae

./: .gitignore  README.md  data_structure.md  pyproject.toml
cache/: seal_sae_shapes_20x.json
docs/: relu-tutorial.md  two-machine-workflow.md
examples/run/: extract_tiles_local.sh  mine_export_from_run.sh  mine_export_relu_encoder.sh  mine_export_sae_tcga_advanced_v11.sh  recover_uni2_from_hf.sh  reorganize_tcga_layout.sh  rep_analytics_from_run.sh  rep_export_from_run.sh  rep_materialize_local.sh  train_relu_sae_encoder.sh  train_sae_tcga_advanced_v11.sh
reports/h5_health/: h5_health_summary.json
src/wsi_sae/: __init__.py  cli.py  representatives.py
src/wsi_sae.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wsi_sae/commands/: __init__.py  build_prototypes.py  build_targets.py  compute_percentiles.py  data.py  export_viewer.py  extract_tiles.py  mine.py  mine_bundles.py  probe.py  rep_analytics.py  rep_export.py  rep_materialize.py  train.py
src/wsi_sae/data/: __init__.py  dataloader.py  layout.py
src/wsi_sae/models/: __init__.py  sae.py
src/wsi_sae/utils/: sae.py  (+1 more)
tests/: __init__.py  _helpers.py  conftest.py  test_data_layout_commands.py  test_dependency_guard.py  test_export_viewer.py  test_extract_tiles.py  test_manifest_schema.py  test_mine_bundles.py  test_mine_smoke.py  test_parent_balanced_selection.py  test_pool2x2_map.py  test_rep_analytics.py  test_rep_export.py  test_rep_materialize.py  test_representative_methods.py  test_sae_init_from_ckpt.py  test_train_preflight.py  test_wsi_bench_representatives.py
